--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.8"
 
 services:
   app:
-    image: app-prod
+    image: maihoangminhbk/web-app
     container_name: app-prod
-    # restart: unless-stopped
+    restart: unless-stopped
     # working_dir: /app
     # volumes: 
       # - ./:/app
