--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "^2.1.3",
     "react-youtube": "^10.1.0",
+    "reactour": "^1.19.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
